ci/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emeris
  namespace: emeris
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: dev.demeris.io
    http:
      paths:
      - backend:
          service:
            name: cosmos-hub
            port:
              number: 1317
        path: /v1/liquidity(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: price-oracle
            port:
              number: 8000
        path: /v1/oracle(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: api-server
            port:
              number: 8000
        path: /v1(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev.demeris.io
    secretName: emeris-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emeris-admin
  namespace: emeris
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Demeris Admin'
spec:
  rules:
  - host: dev.demeris.io
    http:
      paths:
      - backend:
          service:
            name: admin-ui
            port:
              number: 80
        path: /admin
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev.demeris.io
    secretName: emeris-cert
